objects/Asset.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Asset location.  When data coming from SAP will map to Functional Location</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e&quot;,&quot;Edit&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <description>asset specific location</description>
        <label>Room</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>LST stand alone asset or collective System</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset</fullName>
                    <default>true</default>
                    <label>Asset</label>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Build__c</fullName>
        <label>Build</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_Asset__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alerts__c</fullName>
        <description>Important data to view related to this asset</description>
        <label>Alerts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SAP System Status</description>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Location of asset, not contact or account.  After CALP in SAP, feed data from Functional Location</description>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_of_M__c</fullName>
        <formula>Product2.U_of_M_INF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>U of M</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_PM__c</fullName>
        <description>LST engineers maintain last PM visit on Asset records</description>
        <label>Last PM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <inlineHelpText>in the format X.Y.Z.[xxx] where X = Major Revision, Y = Minor Revision, Z = Maintenance Revision, and [xxx] = optional Build number</inlineHelpText>
        <label>Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <description>Asset specific location</description>
        <label>Building</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Assets (Contract)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAB_TYPE__c</fullName>
        <label>LAB TYPE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SERVICES</fullName>
                </value>
                <value>
                    <fullName>QA/QC</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DX_Lot_No__c</fullName>
        <description>Diagnostics lot number</description>
        <label>Lot #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Phone__c</fullName>
        <description>Asset specific</description>
        <label>Lab Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>System_ID__c</fullName>
        <description>Automation systems from CALP</description>
        <label>System ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Camera_S_N__c</fullName>
        <label>Camera S/N</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DX_Version__c</fullName>
        <description>Captures asset versions installed at the client site</description>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.2 R2</fullName>
                </value>
                <value>
                    <fullName>1.3</fullName>
                </value>
                <value>
                    <fullName>1.3 R2</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2015 R2</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>3.1.8</fullName>
                </value>
                <value>
                    <fullName>3.2</fullName>
                </value>
                <value>
                    <fullName>1.6</fullName>
                </value>
                <value>
                    <fullName>1.7</fullName>
                </value>
                <value>
                    <fullName>1.7 R2</fullName>
                </value>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>2.1</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>2.2</fullName>
                </value>
                <value>
                    <fullName>2.3</fullName>
                </value>
                <value>
                    <fullName>2.5.1</fullName>
                </value>
                <value>
                    <fullName>1.4</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>1.8</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>3.1</fullName>
                </value>
                <value>
                    <fullName>4.0</fullName>
                </value>
                <value>
                    <fullName>5.0</fullName>
                </value>
                <value>
                    <fullName>5.1</fullName>
                </value>
                <value>
                    <fullName>4.0 R2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DyCE_Seats__c</fullName>
        <description>CRi product data</description>
        <label>DyCE Seats</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_S_N__c</fullName>
        <description>CRi product data</description>
        <label>Filter S/N</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Rated__c</fullName>
        <label>Last Rated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaintPlant__c</fullName>
        <label>MaintPlant</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Date__c</fullName>
        <inlineHelpText>Original Agreement</inlineHelpText>
        <label>Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_ID__c</fullName>
        <label>Support ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Instrument Application</description>
        <label>Application</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <inlineHelpText>later add lookup to Oppty</inlineHelpText>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Platform__c</fullName>
        <inlineHelpText>Select the users Database</inlineHelpText>
        <label>DB Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCESS DB</fullName>
                </value>
                <value>
                    <fullName>NATIVE DB</fullName>
                </value>
                <value>
                    <fullName>ORACLE 7</fullName>
                </value>
                <value>
                    <fullName>ORACLE 8</fullName>
                </value>
                <value>
                    <fullName>SQL SERVER</fullName>
                </value>
                <value>
                    <fullName>SQL SERVER 2005</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Users__c</fullName>
        <description>Informatics Qty per Site License</description>
        <label>No. of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>link asset to sales rep opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <inlineHelpText>Link to field on Oppty</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Academic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_FSE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User</description>
        <inlineHelpText>Select primary FSE for this product line/territory</inlineHelpText>
        <label>Assigned FSE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Computer_S_N__c</fullName>
        <label>Computer S/N</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Code__c</fullName>
        <label>Contact Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Types__c</fullName>
        <label>Filter Types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blue (MK50102-BLUE)</fullName>
                </value>
                <value>
                    <fullName>Green (MK50102-GREEN)</fullName>
                </value>
                <value>
                    <fullName>Yellow (MK50102-YELLOW)</fullName>
                </value>
                <value>
                    <fullName>Red (MK50102-RED)</fullName>
                </value>
                <value>
                    <fullName>Deep Red (MK50102-DEEPRED)</fullName>
                </value>
                <value>
                    <fullName>NIR (MK50102-NIR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <label>Model Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Asset needed for child relationship within LST System</description>
        <label>Parent Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>ANP</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>CLH</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>ESS</fullName>
                </value>
                <value>
                    <fullName>FAP</fullName>
                </value>
                <value>
                    <fullName>FGP</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>HCS</fullName>
                </value>
                <value>
                    <fullName>HTS</fullName>
                </value>
                <value>
                    <fullName>IAS</fullName>
                </value>
                <value>
                    <fullName>ICP</fullName>
                </value>
                <value>
                    <fullName>INV</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>LVI</fullName>
                </value>
                <value>
                    <fullName>MAS</fullName>
                </value>
                <value>
                    <fullName>MFT</fullName>
                </value>
                <value>
                    <fullName>MLD</fullName>
                </value>
                <value>
                    <fullName>NEO</fullName>
                </value>
                <value>
                    <fullName>PGI</fullName>
                </value>
                <value>
                    <fullName>PRE</fullName>
                </value>
                <value>
                    <fullName>QTS</fullName>
                </value>
                <value>
                    <fullName>RADO</fullName>
                </value>
                <value>
                    <fullName>RRD</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(Product2.Product_Type_INF__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <inlineHelpText>Lookup from CPQ</inlineHelpText>
        <label>Quote Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Zone__c</fullName>
        <label>Service Zone</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Asset__c</fullName>
        <label>Country (Asset)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Date2__c</fullName>
        <description>used as text to accomodate European format</description>
        <label>Install Datetxt</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JulianEndDate__c</fullName>
        <formula>/* Count number of days between End Date &amp; January 1 1900 AD */
(
    (
        End_Date__c
        + 1
    )
    - (
        DATE(
            1900,
            1,
            1
        )
        - 1
    )
)
/* Add number of days between noon January 1 4713 BC &amp; January 1 1900 AD. This results in a Julian End Date */
+ 2415018.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JulianEndDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LW_Sales_Lead__c</fullName>
        <inlineHelpText>Enter the Sales Represenative who made the original sale</inlineHelpText>
        <label>LW Sales Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Claudia Lukac Nye</fullName>
                    <default>true</default>
                    <label>Claudia Lukac Nye</label>
                </value>
                <value>
                    <fullName>Craig Babinec</fullName>
                </value>
                <value>
                    <fullName>Evelyne Lang</fullName>
                </value>
                <value>
                    <fullName>Jerry Lominac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipment_Date__c</fullName>
        <defaultValue>today() -1</defaultValue>
        <description>Date LST Instrument shipped</description>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Number__c</fullName>
        <label>Status Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price_LC__c</fullName>
        <inlineHelpText>must calc Unit Price in LC</inlineHelpText>
        <label>Unit Price LC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Licenses__c</fullName>
        <description>Enter the number of LW User licenses registered to the user</description>
        <label>User Licenses</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Date__c</fullName>
        <inlineHelpText>Original License Agreement date</inlineHelpText>
        <label>Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <inlineHelpText>Original quote name - terms agreed upon</inlineHelpText>
        <label>Agreement Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anesthesia_Kit__c</fullName>
        <description>Copied from CALP 2-10-2012</description>
        <label>Anesthesia Kit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Kit (MK50122-A)</fullName>
                </value>
                <value>
                    <fullName>Convertible Kit (MK50122-B)</fullName>
                </value>
                <value>
                    <fullName>Chamber (MK50122-IC)</fullName>
                </value>
                <value>
                    <fullName>Nose Cone (MK50122-NC)</fullName>
                </value>
                <value>
                    <fullName>Heated Stage (MK50122-HS)</fullName>
                </value>
                <value>
                    <fullName>CRI Anesthesia Stage (MK50123-1)</fullName>
                </value>
                <value>
                    <fullName>CRI Anesthesia Stage (MK50123-2)</fullName>
                </value>
                <value>
                    <fullName>CRI Anesthesia Stage (MK50123-3)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Computer_Model__c</fullName>
        <label>Computer Model</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controller_S_N__c</fullName>
        <label>Controller S/N</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crytotiger_S_N__c</fullName>
        <label>Crytotiger S/N</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DX_Active_Date__c</fullName>
        <description>Assets active date for diagnostics team</description>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Functional_Loc__c</fullName>
        <label>Functional Loc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Good_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for PKI asset to mark them as good references that can be used in future sales</description>
        <label>Good Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Informatics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Informatics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LI_License_Key__c</fullName>
        <label>LI License Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_AssetID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Legacy AssetID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ENVIRONMENTAL</fullName>
                </value>
                <value>
                    <fullName>FORENSIC</fullName>
                </value>
                <value>
                    <fullName>HYDROCARBON</fullName>
                </value>
                <value>
                    <fullName>ALTERNATE ENERGY</fullName>
                </value>
                <value>
                    <fullName>MATERIALS CHAR</fullName>
                </value>
                <value>
                    <fullName>FOOD &amp; CONSUMER</fullName>
                </value>
                <value>
                    <fullName>PHARMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software_seats__c</fullName>
        <description>CRi product info</description>
        <label>Software seats</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USB_Board_Type__c</fullName>
        <description>From CALP 2-2012</description>
        <label>USB Board Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Original Design</fullName>
                </value>
                <value>
                    <fullName>Updated Design 2010</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inForm_Product__c</fullName>
        <label>inForm Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>inForm (MS90087)</fullName>
                </value>
                <value>
                    <fullName>Vectra (MS90089)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>2nd user of equipment</description>
        <label>Additional User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets (Additional User)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <formula>Contact.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Illuminator_S_N__c</fullName>
        <description>CRi product data</description>
        <label>Illuminator S/N</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>